@@ -39,6 +39,9 @@ Package org.springframework.webflow.engine
 * Added AbstractFlowBuilderFlowRegistryFactoryBean for easy setup of a flow registry containing
   flows built using AbstractFlowBuilders.
 * Added DefaultFlowServiceLocator(String, BeanFactory) convenience constructor to the DefaultFlowServiceLocator.
+* Added BeanFactoryFlowVariable(String, BeanFactory, ScopeType) convenience constructor to the
+  BeanFactoryFlowVariable.
+* Added settableExpression() method to AbstractFlowBuilder.
 
 Package org.springframework.webflow.execution
 * Added FlowExecutionListener.sessionCreated(RequestContext, FlowSession) callback, useful for
